added vs code plugin

--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -38,12 +38,11 @@
         </span>
       </div>
       <section class="plugins text-muted">
-        <i class="fa fa-plug"></i>
-        <a class="text-muted" href="https://atom.io/packages/codelf" target="_blank">For Atom</a>
-        &nbsp;
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sublime-text" target="_blank">For Sublime Text</a>
-        &nbsp;
-        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">For Chrome</a>
+        <i class="fa fa-plug"></i>&nbsp;For
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-vs-code" target="_blank">VS Code</a>,
+        <a class="text-muted" href="https://atom.io/packages/codelf" target="_blank">Atom</a>,
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sublime-text" target="_blank">Sublime Text</a>,
+        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">Chrome</a>
       </section>
     </div>
   </section>
