justify note links

--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -79,7 +79,7 @@
 </section>
 <section class="notice-link">
   <a class="animated fadeIn" href="https://www.gitbook.com/book/unbug/react-native-training/details" target="_blank"><i class="fa fa-video-camera" aria-hidden="true"></i> [开源] React Native 开发培训资料和视频</a>
-  <a class="animated fadeIn" href="//mihtool.com/" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> [MIHTool] iOS 上调试和优化页面的免费工具</a>
+  <a class="animated fadeIn" href="//mihtool.com/" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> [MIHTool] iOS 上调试和优化页面的工具</a>
 </section>
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
