--- a/static/app/html/scripts.html
+++ b/static/app/html/scripts.html
@@ -12,7 +12,9 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
-      navigator.serviceWorker.register('src/sw.js').then(function(registration) {
+      navigator.serviceWorker.register('src/sw.js', {
+        scope: '/codelf/'
+      }).then(function(registration) {
         // Registration was successful
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
       }, function(err) {
