--- a/static/app/html/scripts.html
+++ b/static/app/html/scripts.html
@@ -12,9 +12,7 @@
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
-      navigator.serviceWorker.register('src/sw.js', {
-        scope: '/codelf-sw/'
-      }).then(function(registration) {
+      navigator.serviceWorker.register('sw.js').then(function(registration) {
         // Registration was successful
         console.log('ServiceWorker registration successful with scope: ', registration.scope);
       }, function(err) {
