--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -1,8 +1,8 @@
 <section class="container main">
   <header class="main-title">
     <header><h1><a href="./"><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></a></h1></header>
-    <h5>Search over projects from GitHub, Bitbucket, Google Code and more to find </h5>
-    <h5><span class="label label-primary">real-world usage</span> <span class="label label-success">variable names</span></h5>
+    <h5>Search over projects from GitHub, Bitbucket and more to find </h5>
+    <h5><span class="label">real-world usage</span> <span class="label">variable names</span></h5>
   </header>
   <section class="row search-form">
     <div class="col-xs-12">
