added dark mode

--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -70,7 +70,7 @@
           <img src="resources/images/twohardtings.jpg">
         </blockquote>
           <script type="text/html">
-            <h5 class="variable-wrap" data-id="{id}" data-repo="{repo}" data-val="{val}"><span class="label label-{label_type}" title="{val}">{val}</span></h5>
+            <h5 class="variable-wrap" data-id="{id}" data-repo="{repo}" data-val="{val}"><span class="btn btn-{label_type}-outline btn-sm" title="{val}">{val}</span></h5>
           </script>
         </section>
       </div>
