fix `ontuchstart` for `ontouchstart`

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -13,7 +13,7 @@
   <link title="CODELF" type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml">
   @@include("html/styles.html")
 </head>
-<body ontuchstart="">
+<body ontouchstart="">
 @@include("html/main.html")
 @@include("html/sourcecode.html")
 @@include("html/bookmark.html")
