--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -62,7 +62,7 @@
           </div>
           <div class="error">
             <div class="logo"><a href="./"><img src="resources/images/codelf_logo.png"></a></div>
-            <div class="text-default">Nothing found, try <span class="label label-default">Suggestions</span> :)</div>
+            <div class="text-default">Nothing found, please come back later, or try <span class="label label-default">Suggestions</span> :)</div>
           </div>
         </header>
         <section class="bd">
@@ -81,6 +81,7 @@
   <a class="animated fadeIn" href="https://www.gitbook.com/book/unbug/react-native-training/details" target="_blank"><i class="fa fa-video-camera" aria-hidden="true"></i> [开源] React Native 开发培训资料和视频</a>
   <a class="animated fadeIn" href="//mihtool.com/" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> [MIHTool] iOS 上调试和优化页面的工具</a>
   <a class="animated fadeIn" href="https://github.com/unbug/snts" target="_blank"><i class="fa fa-heart" aria-hidden="true"></i> SAY NO TO SUICIDE PUBLIC LICENSE</a>
+  <a class="animated fadeIn" href="https://www.wasmrocks.com/" target="_blank"><i class="fa fa-hand-rock-o" aria-hidden="true"></i> WebAssembly Rocks</a>
 </section>
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
