build search bar

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
   <link type="text/css" rel="stylesheet" href="./css/app.css">
   <script src="js/lib.js"></script>
 </head>
-<body>
-<div class="app" id="app"></div>
+<body ontouchstart>
+<div class="app"></div>
 <script src="./js/app.js"></script>
 </body>
 </html>
