--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Best GitHub stars, repositories tagger and organizer. Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project, GitLab to find real-world usage variable names." />
   <meta name="keywords" content="Codelf,变量命名,函数命名,方法命名,变量命名神器,GitHub 分组,Organize GitHub stars,naming things,naming convention,programming naming">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
-  <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
-  <link rel="apple-touch-icon-precomposed" href="resources/images/codelf_logo.png">
+  <link rel="shortcut icon" href="images/codelf_logo.png" >
+  <link rel="apple-touch-icon" sizes="144x144"  href="images/codelf_logo.png">
+  <link rel="apple-touch-icon-precomposed" href="images/codelf_logo.png">
   <link title="CODELF" type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml">
   <link type="text/css" rel="stylesheet" href="./css/lib.css">
   <link type="text/css" rel="stylesheet" href="./css/app.css">
