auto redirect from http to https

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,12 @@
   <link rel="apple-touch-icon" sizes="144x144"  href="images/codelf_logo.png">
   <link rel="apple-touch-icon-precomposed" href="images/codelf_logo.png">
   <link title="CODELF" type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml">
+  <script>
+    // auto redirect to HTTPS
+    if (window.location.protocol != "https:"){
+      window.location.protocol = "https";
+    }
+  </script>
   <link type="text/css" rel="stylesheet" href="./css/lib.css">
   <link type="text/css" rel="stylesheet" href="./css/app.css">
   <script src="js/lib.js"></script>
