update app.js import path

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
   </script>
   <link type="text/css" rel="stylesheet" href="./css/lib.css">
   <link type="text/css" rel="stylesheet" href="./css/app.css">
-  <script src="js/lib.js"></script>
+  <script src="./js/lib.js"></script>
 </head>
 <body ontouchstart>
 <div class="app"></div>
